<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert.</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice Cream sandwiches hace chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an Ice Cream Sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messager_service">Same day messager service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">Chosen: </string>
    <string name="nothing_clicked">onRadioButtonClickedL Nothing clicked</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">order</string>
    <string name="action_status">status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You Selected Order.</string>
    <string name="action_status_message">You Selected Status.</string>
    <string name="action_favorites_message">You Selected Favorites.</string>
    <string name="action_contact_message">You Selected Contact.</string>
</resources>
