<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.fanzy.droidcafe.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading"
        android:padding="@dimen/padding_regular"
        android:id="@+id/textintro"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/choose_dessert"
        android:layout_below="@id/textintro"
        android:text="@string/choose_a_dessert"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/donut"
        android:contentDescription="@string/donuts"
        android:src="@drawable/donut_circle"
        android:onClick="showDonutOrder"
        android:layout_below="@+id/choose_dessert"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@+id/choose_dessert"
        android:layout_toRightOf="@id/donut"
        android:text="@string/donuts"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/ice_cream"
        android:layout_below="@id/donut"
        android:contentDescription="@string/ice_cream_sandwiches"
        android:src="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"
        android:layout_alignBottom="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@+id/donut"
        android:layout_toRightOf="@id/ice_cream"
        android:text="@string/ice_cream_sandwiches"
        android:id="@+id/textView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/froyo"
        android:layout_below="@id/ice_cream"
        android:contentDescription="@string/froyo"
        android:src="@drawable/froyo_circle"
        android:onClick="showFroyoOrder"
        android:layout_alignBottom="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@+id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:text="@string/froyo"
        android:id="@+id/textView3" />

</RelativeLayout>
